--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Autoplay Video</title>
+  <title>Video</title>
   <style>
     html, body {
       margin: 0;
       height: 100%;
-      overflow: hidden;
+      background: black;
     }
     video {
       width: 100%;
@@ -18,8 +18,8 @@
   </style>
 </head>
 <body>
-  <video autoplay muted loop playsinline poster="https://www.dropbox.com/scl/fi/qdehfvdihqpcn7lvk5e67/Video-Cover.png?rlkey=jdtaljec7vj7bz8sr1b89dg5n&st=pkrv3654&raw=1">
-    <source src="https://www.dropbox.com/scl/fi/eocue08amuuovn4ssmx6l/splash-new.mov?rlkey=aref6v6e7h5gdeenivx36tjys&st=8uwh11nn&raw=1" type="video/quicktime">
+  <video autoplay muted loop playsinline>
+    <source src="trimmed.mov" type="video/quicktime">
     Your browser does not support the video tag.
   </video>
 </body>
