--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <video autoplay muted loop playsinline>
-    <source src="trimmed.mov" type="video/quicktime">
+    <source src="hero.mp4" type="video/quicktime">
     Your browser does not support the video tag.
   </video>
 </body>
